- seperated code from output (errors) - errors are now visible everywhere! - fixed autodetectors in javascript - went insane

--- a/html/custom.css
+++ b/html/custom.css
@@ -1,6 +1,7 @@
 body {
   padding: 10px 0 0 0;
   -webkit-user-select: none;
+  cursor: pointer;
 }
 
 .div-content {
@@ -34,6 +35,16 @@ body {
   padding-left: 5px;
 }
 
+#settingsErrorWrapper {
+  display: block;
+  position: absolute;
+  top:80px;
+  right: 40px;
+  z-index: 9999999;
+  padding: 0;
+  margin: 0;
+}
+
 #settingsError {
-  display: none;
+  padding: 20px 20px 5px 20px;
 }
